force-app/main/default/objects/DD_Enrollment__c/DD_Enrollment__c.object-meta.xml
<CustomObject>
    <description>Member enrollment record linking a person to a policy</description>
    <label>Enrollment</label>
    <nameField><displayFormat>ENR-{000000}</displayFormat><label>Enrollment ID</label><type>AutoNumber</type></nameField>
    <pluralLabel>Enrollments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>