force-app/main/default/objects/DD_Enrollment__c/fields/COBRA_Flag__c.field-meta.xml
<CustomField>
    <fullName>COBRA_Flag__c</fullName>
    <label>COBRA</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>COBRA continuation</description>
</CustomField>