force-app/main/default/objects/DD_Enrollment__c/fields/Coverage_Tier__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Tier__c</fullName>
    <label>Coverage Tier</label>
    <type>Picklist</type>
    <required>true</required><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>EE</fullName><default>false</default><label>EE</label></value><value><fullName>ES</fullName><default>false</default><label>ES</label></value><value><fullName>EC</fullName><default>false</default><label>EC</label></value><value><fullName>EF</fullName><default>false</default><label>EF</label></value></valueSetDefinition></valueSet>
    <description>Enrollment tier</description>
</CustomField>