force-app/main/default/objects/DD_Enrollment__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo><relationshipLabel>Enrollments as Member</relationshipLabel><relationshipName>Enrollments_Member</relationshipName><required>true</required>
    <description>Member account</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>