force-app/main/default/objects/DD_Enrollment__c/fields/Policy__c.field-meta.xml
<CustomField>
    <fullName>Policy__c</fullName>
    <label>Policy</label>
    <type>Lookup</type>
    <referenceTo>DD_Policy__c</referenceTo><relationshipLabel>Enrollments</relationshipLabel><relationshipName>Enrollments_Policy</relationshipName><required>true</required>
    <description>Active policy</description>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>