force-app/main/default/objects/DD_Enrollment__c/fields/Waiting_Period_Status__c.field-meta.xml
<CustomField>
    <fullName>Waiting_Period_Status__c</fullName>
    <label>Waiting Period Status</label>
    <type>Picklist</type>
<valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Active</fullName><default>false</default><label>Active</label></value><value><fullName>Waived</fullName><default>false</default><label>Waived</label></value><value><fullName>Expired</fullName><default>false</default><label>Expired</label></value><value><fullName>Not Applicable</fullName><default>false</default><label>Not Applicable</label></value></valueSetDefinition></valueSet>
    <description>Waiting period status</description>
</CustomField>