force-app/main/default/objects/DD_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <columns>NAME</columns>
    <columns>Policy__c</columns>
    <columns>Member__c</columns>
    <columns>Coverage_Tier__c</columns>
    <columns>Effective_Date__c</columns>
</ListView>